<resources>
    <string name="app_name">Espoir</string>
    <string name="cases">Cases</string>
    <string name="Events">Events</string>
    <string name="Contacts">Contacts</string>
    <string name="about">About</string>
    <string name="hint_firstName">First Name (optional)</string>

    <string name="hint_lastName">Last Name (optional)</string>

    <string name="hint_email">Email</string>
    <string name="hint_type">Type</string>
    <string name="hint_status">Status</string>

    <string name="hint_password">Password</string>
    <string name="hint_username">It can be firstName.lastName or anything else</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a contact? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="session">Session</string>
    <string name="action_save_case">Save</string>
    <string name="action_report_case">Report</string>
    <string name="backdrop_title">New Event</string>
    <string name="backdrop_subtitle">New Event subtitle</string>
    <string name="no_data">No Data</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="or">OR</string> Paste a thumbnail URL
    <string name="paste_thumbnail_URL">Paste a thumbnail URL</string>


    ///new
    <string name="add_alarm">Add New Alarm</string>
    <string name="new_alarm_added">New alarm added successfully</string>
    <string name="form_hint_title">Alarm title (required)</string>
    <string name="form_hint_description">Alarm description (optional)</string>
    <string name="error_title_min_characters">At least %1$d characters</string>
    <string name="main_activity_explanation">Click the button to try it!</string>
    <string name="main_activity_explanation_disclaimer">This app DOES NOT set up alarms for real!</string>
    <string-array name="steps_titles">
        <item>Title</item>
        <item>Description</item>
        <item>Time</item>
        <item>Week schedule</item>
    </string-array>
    <string-array name="steps_subtitles">
        <item>Title of the alarm</item>
        <item>Description of the alarm</item>
        <item>Time when the alarm will go off</item>
        <item>Week schedule of the alarm</item>
    </string-array>
    <string-array name="week_days">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

    <!-- We can overwrite the values of the library's strings in order to customize them -->
    <string name="vertical_form_stepper_form_discard_question">Discard alarm?</string>
    <string name="vertical_form_stepper_form_info_will_be_lost">All the information about this new alarm will be lost</string>
    <string name="vertical_form_stepper_form_confirm_button">Add case</string>
    <string name="vertical_form_stepper_form_sending_data_message">Adding new alarm…</string>
    //end new





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
