<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/register"
        android:textColor="@color/gray"
        android:textSize="40sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/firstName"
        android:textColor="@color/gray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/hint_firstName"
        android:textColorHint="@color/red"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/lastName"
        android:textColor="@color/gray"
        android:textColorHint="@color/red"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/hint_lastName"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/username"
        android:textColor="@color/gray"
        android:textColorHint="@color/red"


        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/type"
        android:textColor="@color/gray"
        android:textColorHint="@color/red"


        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/hint_type"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        android:textColor="@color/gray"
        android:textColorHint="@color/red"


        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/or"
        android:textColor="#ce3232"
        android:textSize="10sp"
        android:typeface="serif" />

    <EditText
        android:layout_width="fill_parent"
        android:textColorHint="@color/red"

        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:textColor="@color/gray"

        android:hint="Phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/password"
        android:textColor="@color/gray"
        android:textColorHint="@color/red"


        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        />





    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ff0000"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/btn_register"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />
</LinearLayout>